--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 			windowHalfX = window.innerWidth / 2,
 			windowHalfY = window.innerHeight / 2,
 
-			camera, scene, renderer,
-			particleSystem;
+			camera, scene, renderer, particleSystem;
 
 			var PI2 = Math.PI * 2;
 
